# wgslib

./: .gitignore  README.md  license.txt
clients/web/: dumb.html  histogram.html  index.html  variogram.html
clients/web/js/demo/: flot-demo.js
clients/web/js/wgslib/: grid.js  variogram.js
server/: CMakeLists.txt  abstractwgslibstubserver.h  common.h  resources.json  wgslibserver.cpp  wgslibstubclient.h
server/cmake/modules/: FindFFTW.cmake  FindJSONRPC.cmake
server/varmap/: CMakeLists.txt  fftvarmapcalc.cpp  fftvarmapcalc.h
server/wgslibserver/: CMakeLists.txt  abstractwgslibstubclient.h  abstractwgslibstubserver.h  grid.cpp  grid.h  main.cpp  resources.json  version.h.in  wgslibserver.cpp  wgslibserver.h  wgslibstubclient.h  wgslibstubclient.js  wgslibstubserver.h
